--- a/web/index.html
+++ b/web/index.html
@@ -1,12 +1,12 @@
 <!doctype html>
-<html lang="en" class="h-100" data-bs-theme="auto">
-  <head><script src="https://getbootstrap.com/docs/5.3/assets/js/color-modes.js"></script>
+<html lang="en" class="h-100">
+  <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Vite + Vue</title>
   </head>
-  <body class="d-flex flex-column h-100">
+  <body class="d-flex flex-column bg-secondary">
     <div id="app" class="container-fluid"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
