--- a/web/index.html
+++ b/web/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Vite + Vue</title>
+    <title>Tipene Moss -- Resume Portfolio</title>
   </head>
   <body class="d-flex flex-column bg-secondary">
     <div id="app" class="container-fluid"></div>
