--- a/web/index.html
+++ b/web/index.html
@@ -1,12 +1,12 @@
 <!doctype html>
-<html lang="en" class="h-100">
+<html lang="en" class="h-100" data-bs-theme="auto">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/public/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Tipene Moss -- Resume Portfolio</title>
   </head>
-  <body class="d-flex flex-column bg-secondary">
+  <body class="d-flex flex-column primary-bg">
     <div id="app" class="container-fluid"></div>
     {{if eq .Deploy "DEVELOPMENT"}}
     <script type="module" src="http://localhost:5173/@vite/client"></script>
