--- a/web/index.html
+++ b/web/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Tipene Moss -- Resume Portfolio</title>
   </head>
-  <body class="d-flex flex-column primary-bg">
-    <div id="app" class="container-fluid"></div>
+  <body>
+    <div id="app" class=""></div>
     {{if eq .Deploy "DEVELOPMENT"}}
-    <script type="module" src="http://localhost:5173/@vite/client"></script>
-    <script type="module" src="http://localhost:5173/src/main.js"></script>
+    <script type="module" src="http://10.0.0.68:5173/@vite/client"></script>
+    <script type="module" src="http://10.0.0.68:5173/src/main.js"></script>
     {{else}}
     {{ range .Links }}
     {{.}}
